objects/Feedback__c.object
<CustomObject>
    <description>SCH-0114 - Feedback records for Client Submissions, NPS Surveys, Calls, or Internal Submissions.</description>
    <fields>
        <fullName>Accounting_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeedbackAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Items_Completed__c</fullName>
        <label>Action Items Completed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback_Advisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attorney</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bookkeeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeedbackBK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates old NPS submission with former case.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>Advisor Admins</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Mailroom</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Pensions</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Professional Advisors</fullName>
                </value>
                <value>
                    <fullName>Professional Attorneys</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departments_Involved__c</fullName>
        <label>Department(s) Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <formula>IF(VALUE(TEXT(NPS_Rating__c)) &lt;= 6, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employees_Involved__c</fullName>
        <label>Employee(s) Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Description__c</fullName>
        <label>Feedback Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Number__c</fullName>
        <displayFormat>FB{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <description>Where the feedback originated from or was submitted by a client.</description>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hubspot NPS Survey</fullName>
                </value>
                <value>
                    <fullName>Simple Survey NPS Survey</fullName>
                </value>
                <value>
                    <fullName>Client Conversation</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <description>Captures first datetime when the feedback is moved to &quot;In Progress&quot;</description>
        <label>First Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Entity_Formation_or_Tax_Sale__c</fullName>
        <formula>Client__r.First_Entity_Formation_or_Tax_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Entity Formation or Tax Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_often_do_you_use_the_Platinum_Portal__c</fullName>
        <label>How often do you use the Platinum Portal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_like_to_be_a_beta_tester__c</fullName>
        <label>I&apos;d like to be a beta tester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Law_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Success Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeedbackLC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Rating__c</fullName>
        <label>NPS Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neutral__c</fullName>
        <formula>IF( AND(VALUE(TEXT(NPS_Rating__c)) &lt; 9,
VALUE(TEXT(NPS_Rating__c)) &gt; 6), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neutral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professional_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Professional Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <formula>IF( VALUE(TEXT(NPS_Rating__c)) &gt;= 9, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Call_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Call Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <inlineHelpText>Date that the feedback was submitted.</inlineHelpText>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The manager/supervisor who needs to address the complaint.</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Comments__c</fullName>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Preparer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Preparer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeedbackTAX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Comments__c</fullName>
        <label>Update Comments</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_use_platinum_for__c</fullName>
        <label>What do you use Platinum for?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_does_the_portal_do_well__c</fullName>
        <label>What does the portal do well?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_would_you_like_to_do_but_cant__c</fullName>
        <label>What would you like to do but can&apos;t?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Where_can_the_portal_be_improved__c</fullName>
        <label>Where can the portal be improved?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>Happy_Clients</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Survey_Comments__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPS_Rating__c</field>
            <operation>equals</operation>
            <value>9,10</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feedback__c.NPS_Survey_Submission,Feedback__c.Platinum_Feedback</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/14/2022 12:00 AM</value>
        </filters>
        <label>(9-10) - Promotors</label>
    </listViews>
    <listViews>
        <fullName>NPS_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Client__c</columns>
        <columns>Survey_Comments__c</columns>
        <columns>Comments__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPS_Rating__c</field>
            <operation>notContain</operation>
            <value>7,8,9,10</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>greaterThan</operation>
            <value>10/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>Complaint Resolution,Client Concerns</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>(0-6) - Detractors</label>
    </listViews>
    <listViews>
        <fullName>NPS_Convert_Client_to_Higher_Score</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Client__c</columns>
        <columns>Survey_Comments__c</columns>
        <columns>Comments__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPS_Rating__c</field>
            <operation>notContain</operation>
            <value>0,1,2,3,4,5,6,9,10</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>platinum feedback</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>Complaint Resolution,Client Concerns</value>
        </filters>
        <label>(7-8) Neutral</label>
    </listViews>
    <listViews>
        <fullName>NPS_Surveys0</fullName>
        <columns>Feedback_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Client__c</columns>
        <columns>NPS_Rating__c</columns>
        <columns>Survey_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feedback__c.NPS_Survey_Submission</value>
        </filters>
        <label>All NPS Surveys</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Feedback</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platinum_Feedback</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Where_can_the_portal_be_improved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>platinum</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting on someone else,Completed</value>
        </filters>
        <label>Platinum Feedback</label>
    </listViews>
    <listViews>
        <fullName>World_Class_Submissions</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Complaint Resolution,QA Review,Client Concern,Client Concerns,Client Concerns - Test</value>
        </filters>
        <label>Internal Escalations</label>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <recordTypes>
        <fullName>General_Feedback</fullName>
        <active>true</active>
        <description>Feedback received from other non-automated sources.</description>
        <label>General Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPS_Survey_Submission</fullName>
        <active>true</active>
        <description>NPS Survey submission from a contact.</description>
        <label>NPS Survey Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Platinum_Feedback</fullName>
        <active>true</active>
        <description>Used in conjuction with the feedback form in the Platinum portal.</description>
        <label>Platinum Feedback</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Client_Contact_lookup_cannot_be_changed</fullName>
        <active>false</active>
        <description>This is necessary due to few fields access to all the employees of Anderson</description>
        <errorConditionFormula>OR(ISCHANGED( Client__c),ISCHANGED( Contact__c))</errorConditionFormula>
        <errorMessage>Client or Contact of the feedback cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Name_Cannot_be_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Feedback Name cannot be edited/changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NPS_rating_cannot_be_changed</fullName>
        <active>false</active>
        <description>This is necessary to OWD and access to few fields to all employees in Anderson</description>
        <errorConditionFormula>ISCHANGED( NPS_Rating__c )</errorConditionFormula>
        <errorDisplayField>NPS_Rating__c</errorDisplayField>
        <errorMessage>NPS rating of the survey cannot be modified. Please contact your salesforce administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Survey_Comments_cannot_be_modified</fullName>
        <active>false</active>
        <description>This is necessary due to few fields access to all Anderson employees. Executive Community users can edit this field</description>
        <errorConditionFormula>AND(NOT($Profile.Id =&apos;00e6f000001IzWb&apos;),ISCHANGED( Survey_Comments__c))</errorConditionFormula>
        <errorDisplayField>Survey_Comments__c</errorDisplayField>
        <errorMessage>This field cannot be edited</errorMessage>
    </validationRules>
</CustomObject>